force-app/main/default/objects/SchedulingTask__c/SchedulingTask__c.object-meta.xml
<CustomObject>
    <label>SchedulingTask</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>SchedulingTask Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SchedulingTask</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>