force-app/main/default/objects/SchedulingTask__c/fields/ApplicationLeaveType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationLeaveType__c</fullName>
    <label>Application Leave Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>