force-app/main/default/objects/SchedulingTask__c/fields/Check_In_Attendance_Information__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Attendance_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In Attendance Information</label>
    <referenceTo>Promoter_Attendance_Information__c</referenceTo>
    <relationshipLabel>SchedulingTask</relationshipLabel>
    <relationshipName>SchedulingTask</relationshipName>
    <type>Lookup</type>
</CustomField>