force-app/main/default/objects/SchedulingTask__c/fields/Check_In_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Status__c</fullName>
    <formula>TEXT(Check_In_Attendance_Information__r.Status__c)</formula>
    <label>Check In Status</label>
    <type>Text</type>
</CustomField>