force-app/main/default/objects/SchedulingTask__c/fields/Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Time__c</fullName>
    <formula>Check_In_Attendance_Information__r.CheckIn_Time__c</formula>
    <label>Check In Time</label>
    <type>Time</type>
</CustomField>