force-app/main/default/objects/SchedulingTask__c/fields/Check_In_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Type__c</fullName>
    <formula>TEXT(Check_In_Attendance_Information__r.Check_in_out_Type__c)</formula>
    <label>Check In Type</label>
    <type>Text</type>
</CustomField>