force-app/main/default/objects/SchedulingTask__c/fields/Check_Out_Attendance_Information__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Attendance_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Out Attendance Information</label>
    <referenceTo>Promoter_Attendance_Information__c</referenceTo>
    <relationshipLabel>SchedulingTask (Check Out Attendance Information)</relationshipLabel>
    <relationshipName>SchedulingTask1</relationshipName>
    <type>Lookup</type>
</CustomField>