force-app/main/default/objects/SchedulingTask__c/fields/Check_Out_Distance__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Distance__c</fullName>
    <formula>Check_Out_Attendance_Information__r.Distance__c</formula>
    <label>Check Out Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>