force-app/main/default/objects/SchedulingTask__c/fields/Check_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Status__c</fullName>
    <formula>TEXT(Check_Out_Attendance_Information__r.Status__c)</formula>
    <label>Check Out Status</label>
    <type>Text</type>
</CustomField>