force-app/main/default/objects/SchedulingTask__c/fields/Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Time__c</fullName>
    <formula>Check_Out_Attendance_Information__r.CheckIn_Time__c</formula>
    <label>Check Out Time</label>
    <type>Time</type>
</CustomField>