force-app/main/default/objects/SchedulingTask__c/fields/Check_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Type__c</fullName>
    <formula>TEXT(Check_Out_Attendance_Information__r.Check_in_out_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Type</label>
    <type>Text</type>
</CustomField>