force-app/main/default/objects/SchedulingTask__c/fields/IsAbstained__c.field-meta.xml
<CustomField>
    <fullName>IsAbstained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Abstained</label>
    <type>Checkbox</type>
</CustomField>