force-app/main/default/objects/SchedulingTask__c/fields/IsNormal__c.field-meta.xml
<CustomField>
    <fullName>IsNormal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Normal</label>
    <type>Checkbox</type>
</CustomField>