force-app/main/default/objects/SchedulingTask__c/fields/IsNormalF__c.field-meta.xml
<CustomField>
    <fullName>IsNormalF__c</fullName>
    <formula>IF(TODAY() &lt;  Scheduling_Date__c, Application__c == NULL,  
     IF( TODAY() ==  Scheduling_Date__c,  Check_In_Status__c != &apos;Late Check in&apos; &amp;&amp;  Check_Out_Status__c == &apos;Early Check out&apos;,  
        Check_In_Status__c == &apos;Check in&apos; &amp;&amp;  Check_Out_Status__c == &apos;Check out&apos; ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Normal</label>
    <type>Checkbox</type>
</CustomField>