force-app/main/default/objects/SchedulingTask__c/fields/Promoter_Attendance_Rule__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Attendance_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Attendance Rule</label>
    <referenceTo>Promoter_Attendance_Rule__c</referenceTo>
    <relationshipLabel>SchedulingTask</relationshipLabel>
    <relationshipName>SchedulingTask</relationshipName>
    <type>Lookup</type>
</CustomField>