force-app/main/default/objects/SchedulingTask__c/fields/Responsible_person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible person</label>
    <referenceTo>Responsible_Person__c</referenceTo>
    <relationshipLabel>SchedulingTask</relationshipLabel>
    <relationshipName>SchedulingTask</relationshipName>
    <type>Lookup</type>
</CustomField>