force-app/main/default/objects/SchedulingTask__c/fields/Scheduling_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Date__c</fullName>
    <label>Scheduling Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>