force-app/main/default/objects/SchedulingTask__c/fields/SchedulingPlan__c.field-meta.xml
<CustomField>
    <fullName>SchedulingPlan__c</fullName>
    <label>SchedulingPlan</label>
    <referenceTo>SchedulingPlan__c</referenceTo>
    <relationshipLabel>SchedulingTask</relationshipLabel>
    <relationshipName>SchedulingTask</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>