force-app/main/default/objects/SchedulingTask__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>SchedulingTask</relationshipLabel>
    <relationshipName>SchedulingTask</relationshipName>
    <type>Lookup</type>
</CustomField>